--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
+
+h2{
+    font-family: "Playfair Display", Sans-serif;
+}
+
+p{
+    font-family: "Dosis", Sans-serif;
+}
+
+body {
+    background-color: #f2f2f2;
+  }
+
 .hero img{
     border: 1px solid red;
     max-width: 100%;
@@ -9,11 +25,114 @@
 .homepageGridHeader{
     border: 1px solid red;
     width: 100%;
-    height: 100px;
+    height: 200px;
     margin-bottom: 20px;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    background: #fff;
+    
 }
 
+.homepageGridHeader h2{
+    font-size: 50px;
+    font-weight: 400;
+    margin-bottom: 0;
+}
+
+.homepageGridHeader p{
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.homepagePropertyGrid{
+    display:flex;
+    width: 90%;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border: 1px solid red;
+    background: #fff;
+    
+    
+}
+
+.homepageGridItem{
+    border: 3px solid #e0e0e0;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    height:600px;
+   
+    
+}
+
+.gridPropertyDetails{
+    text-align: center;
+
+}
+
+.gridProperyImage{
+    height: 300px;
+    overflow: hidden;
+}
+
+.gridProperyImage a img{
+    width:100%;
+    
+}
+
+/*device screen sizes*/
+
+/*any device that is 767x and smaller (normal mobile screen size) get these styles*/
+@media(max-width:767px){
+
+    .homepagePropertyGrid{
+        flex-direction: column;
+
+    }
+
+    .homepageGridItem{
+        width:100%;
+    }
+
+    .homepageGridHeader h2{
+        font-size: 35px;
+        font-weight: 400;
+        margin-bottom: 0;
+    }
+    
+    .homepageGridHeader p{
+        font-size: 20px;
+        font-weight: 500;
+    }
+
+}
+
+
+/*any device that is at least 768px or wider (tablet siz) get these styles*/
+@media(min-width: 768px) {
+    .homepagePropertyGrid{
+        flex-direction: row;
+    }
+
+    .homepageGridItem{
+        width: 50%;
+    }
+}
+
+/*any device screensize 1026 px (laptop size) and wider get these styles*/
+@media(min-width: 1026px) {
+    .homepagePropertyGrid{
+        flex-direction: row;
+
+    }
+
+    .homepageGridItem{
+        width: calc(33%);
+        
+    }
+}
