--- a/src/App.css
+++ b/src/App.css
@@ -67,13 +67,13 @@ body {
 }
 
 .homepageGridItem{
-    border: 3px solid #e0e0e0;
+    border: 1px solid #e0e0e0;
     margin-bottom: 20px;
     box-sizing: border-box;
     display:flex;
     flex-direction: column;
     justify-content: center;
-    height:600px;
+    height:390px;
    
     
 }
@@ -84,7 +84,7 @@ body {
 }
 
 .gridProperyImage{
-    height: 300px;
+    height: 201px;
     overflow: hidden;
 }
 
@@ -98,6 +98,7 @@ body {
     width: 100%;
     height:600px;
     overflow: hidden;
+    position: relative;
 }
 
 .imageCarousel img{
@@ -107,6 +108,43 @@ body {
    /* animation: image-transition 5s infinite ease-out; */
 }
 
+.carouselOverlay{
+    width: 30%;
+    height: 40%;
+    position: absolute;
+    top: 30%;
+    left:5%;
+    text-align: left;
+    background: #fff;
+    opacity: 0.9;
+    box-sizing: border-box;
+    padding: 20px;
+    
+    
+}
+
+.carouselOverlay button{
+    background-color: #fff;
+    color: #000;
+    padding: 10px 20px;
+    border: 2px solid #e0e0e0;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.citiesSection{
+    border: 1px solid blue;
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+}
+
+.citiesSectionColumn{
+    border: 1px solid red;
+    width: 33%;
+    height: 100px;
+    
+}
 
 /*
 @keyframes image-transition {
@@ -152,6 +190,19 @@ body {
         font-weight: 500;
     }
 
+    .imageCarousel{
+        height:500px;
+    }
+
+
+    .carouselOverlay{
+        width: 80%;
+        height: 50%;
+
+    }  
+
+
+
 }
 
 
@@ -164,6 +215,18 @@ body {
     .homepageGridItem{
         width: 50%;
     }
+
+    .imageCarousel{
+        height:500px;
+    }
+
+
+    .carouselOverlay{
+        width: 50%;
+        height: 50%;
+
+    }    
+
 }
 
 /*any device screensize 1026 px (laptop size) and wider get these styles*/
@@ -177,4 +240,12 @@ body {
         width: calc(33%);
         
     }
+
+    .carouselOverlay{
+        width: 40%;
+        height:45%;
+
+    }    
+
+    
 }
