--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,9 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    width: 100%;
     height: 650px; /* Adjust the height as needed */
+    overflow:hidden; /*the image was causing this div to be wider than the whole website so we had to crop the omage inside this div*/
 }
 
 
@@ -56,7 +58,7 @@ body {
 
 .homepagePropertyGrid{
     display:flex;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -133,17 +135,41 @@ body {
 }
 
 .citiesSection{
-    border: 1px solid blue;
-    width: 70%;
+    border: 1px solid purple;
+    width: 85%;
+    height: 650px;
     margin: 0 auto;
     display: flex;
 }
 
 .citiesSectionColumn{
     border: 1px solid red;
-    width: 33%;
-    height: 100px;
+    width: 30%;
+    height: 100%;
+    margin: 0 auto;
     
+    
+}
+
+.citySectionItem1{
+    border:1px solid green;
+    width: 100%;
+    height: 196px;
+    margin-bottom: 30px;
+    box-sizing: border-box;
+    
+}
+
+.citySectionItem2 img{
+    width:100%;
+}
+
+.citySectionItem2{
+    border:1px solid green;
+    width: 100%;
+    height: 425px;
+    box-sizing: border-box;
+    margin-bottom: 30px;
 }
 
 /*
@@ -201,7 +227,38 @@ body {
 
     }  
 
+    .citiesSection{
+        flex-direction: column;
+        justify-content: center;
+        height: auto;
+    }
 
+
+    .citiesSectionColumn{
+        border: 1px solid red;
+        width: 100%;
+        height: 100%;
+        margin-right: 0;
+        
+        
+    }
+    
+    .citySectionItem1{
+        border:1px solid green;
+        width: 100%;
+        height: 300px;
+        margin-bottom: 30px;
+        box-sizing: border-box;
+    }
+    
+    .citySectionItem2{
+
+        width: 100%;
+        height: 300px;
+        margin-bottom: 30px;
+        box-sizing: border-box;
+
+    }      
 
 }
 
@@ -245,7 +302,10 @@ body {
         width: 40%;
         height:45%;
 
-    }    
+    }   
+    
+ 
+
 
     
 }
