--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: space-between;
     border: 1px solid red;
+    overflow: hidden;
 }
 
 .logo-container{
