--- a/src/App.css
+++ b/src/App.css
@@ -143,12 +143,10 @@ body {
 }
 
 .citiesSectionColumn{
-    border: 1px solid red;
+    border: 1px solid red; 
     width: 30%;
     height: 100%;
-    margin: 0 auto;
-    
-    
+    margin: 0 auto; 
 }
 
 .citySectionItem1{
@@ -157,20 +155,65 @@ body {
     height: 196px;
     margin-bottom: 30px;
     box-sizing: border-box;
-    
+    overflow: hidden;
+    border-radius: 5px;
+    /* box-shadow: 5px 5px 5px #c0c0c0; */
+    position: relative; /* we need this to set the absolute position of the text wrap in this div*/
 }
 
-.citySectionItem2 img{
-    width:100%;
+/*We created this box inside of the city section grid boxes so that
+we can create a dark see through box so our white text wont blend in with the images*/
+.seeThroughBox{
+    border: 1px solid blue;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3); /* Adjust opacity as needed */
 }
+
+.citySectionItemTextWrap{
+    /*border: 1px solid grey; */
+    width:100px;
+    height: 100px;
+    color: #fff;
+    position: absolute;
+    top: 10px;
+    left:10px;
+}
+
+.citySectionItem1 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+}
+
+
 
 .citySectionItem2{
-    border:1px solid green;
+    /* border:1px solid green; */
     width: 100%;
     height: 425px;
     box-sizing: border-box;
     margin-bottom: 30px;
+    overflow: hidden;
+    border-radius: 5px;
+    /* box-shadow: 5px 5px 5px #c0c0c0; */
+    position: relative; /* we need this to set the absolute position of the text wrap in this div*/
+    
 }
+
+.citySectionItem2 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
+
 
 /*
 @keyframes image-transition {
@@ -195,6 +238,22 @@ body {
 
 /*any device that is 767x and smaller (normal mobile screen size) get these styles*/
 @media(max-width:767px){
+
+    .hero{
+        height: 350px;
+    }
+
+    .titleHeaderSection{
+        height: 150px;
+    }
+
+    .titleHeaderSection h2{
+        font-size: 25px;        
+    }
+
+    .titleHeaderSection p{
+        font-size: 20px;        
+    }
 
     .homepagePropertyGrid{
         flex-direction: column;
@@ -265,6 +324,11 @@ body {
 
 /*any device that is at least 768px or wider (tablet siz) get these styles*/
 @media(min-width: 768px) {
+
+    .hero{
+        height: 550px;
+    }
+
     .homepagePropertyGrid{
         flex-direction: row;
     }
