--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,6 @@ body {
 
 
 .titleHeaderSection{
-    border: 1px solid red;
     width: 100%;
     height: 200px;
     margin-bottom: 20px;
@@ -62,7 +61,6 @@ body {
     margin: 0 auto;
     flex-wrap: wrap;
     justify-content: space-between;
-    border: 1px solid red;
     background: #fff;
     
     
@@ -135,36 +133,32 @@ body {
 }
 
 .citiesSection{
-    border: 1px solid purple;
     width: 85%;
     height: 650px;
-    margin: 0 auto;
+    margin: 0 auto 15px auto; /*top right bottom left*/
     display: flex;
 }
 
 .citiesSectionColumn{
-    border: 1px solid red; 
     width: 30%;
     height: 100%;
     margin: 0 auto; 
 }
 
 .citySectionItem1{
-    border:1px solid green;
     width: 100%;
     height: 196px;
     margin-bottom: 30px;
     box-sizing: border-box;
     overflow: hidden;
     border-radius: 5px;
-    /* box-shadow: 5px 5px 5px #c0c0c0; */
+    box-shadow: 5px 5px 5px #c0c0c0; 
     position: relative; /* we need this to set the absolute position of the text wrap in this div*/
 }
 
 /*We created this box inside of the city section grid boxes so that
 we can create a dark see through box so our white text wont blend in with the images*/
 .seeThroughBox{
-    border: 1px solid blue;
     position: absolute;
     top: 0px;
     left: 0px;
