--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -6,23 +6,20 @@
     display:flex;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid red;
     overflow: hidden;
 }
 
 .logo-container{
-    border: 1px solid red; 
     margin-right: 10px;
 
 }
 
 .logo-image{
-    height: auto;
-    max-width: 100%;
+    height: 2%;
+    width: 100%;
 }
 
 .links-container{
-    border: 1px solid red;
     display: flex;
     width: 300px;
     justify-content: space-evenly;
