we fixed the tailwind css issue by rebuildig the output.css file and putting the correct path to the output.css in the command. We added the Continue with google button on our sign in and signup pages

--- a/client/src/output.css
+++ b/client/src/output.css
@@ -554,14 +554,14 @@ video {
   display: none;
 }
 
-.my-7 {
-  margin-top: 1.75rem;
-  margin-bottom: 1.75rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-7 {
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
 }
 
 .mt-5 {
@@ -572,6 +572,10 @@ video {
   display: flex;
 }
 
+.contents {
+  display: contents;
+}
+
 .max-w-lg {
   max-width: 32rem;
 }
@@ -580,12 +584,12 @@ video {
   flex-direction: column;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-2 {
   gap: 0.5rem;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .rounded-lg {
@@ -594,6 +598,11 @@ video {
 
 .border {
   border-width: 1px;
+}
+
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
 }
 
 .bg-slate-700 {
@@ -622,6 +631,11 @@ video {
   text-transform: uppercase;
 }
 
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity, 1));
+}
+
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity, 1));
@@ -630,11 +644,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity, 1));
 }
 
 .hover\:opacity-95:hover {
